# the-primer

./: LICENSE  README.md  pyproject.toml
src/capillary_sdk/: __init__.py  events.py
src/capillary_sdk/models/: __init__.py  cycle_loop.py  learner_interaction.py  learning_actions.py  presentation.py  student_model.py
src/capillary_sdk/ports/: __init__.py  cycle_loop.py  learner_interaction.py  learning_actions.py  platform.py  presentation.py  student_model.py
src/capillary_sdk/reference/: __init__.py  slack_adapter.py
src/primer_sdk/ports/: learner_interaction.py
tests/: test_events.py  test_models_cycle_loop.py  test_models_learner_interaction.py  test_models_learning_actions.py  test_models_presentation.py  test_models_student.py  test_ports_cycle_loop.py  test_ports_learner_interaction.py  test_ports_learning_actions.py  test_ports_presentation.py  test_ports_student.py  test_reference_slack.py
