[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "capillary-actions-sdk"
version = "0.1.0"
description = "SDK for building extensions to the Capillary Actions platform"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/capillary_sdk"]

[tool.hatch.build.targets.sdist]
include = ["src/capillary_sdk"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
]
